# kenny_gem_product_finder

./: .dockerignore  BACKEND_SUMMARY.md  DATABASE_SETUP.md  DESIGN_VERIFICATION.md  DURABILITY_SCORE_FEATURE.md  Dockerfile  FEATURES_IMPLEMENTED.md  FEATURE_TEST_RESULTS.md  FRONTEND_COMPLETE.md  IMAGE_EXTRACTION_ANALYSIS.md  IMPLEMENTATION_GAP_ANALYSIS.md  INLINE_COMPARISON_UPDATE.md  INSTALL_NODEJS.md  PHASED_IMPLEMENTATION_PLAN.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PRODUCT_IMAGES_COMPLETE.md  README.md  TROUBLESHOOTING.md  settings.local.json
backend/: .dockerignore  .env.example  .gitignore  API_MIGRATION_SUMMARY.md  CACHE_SEARCH_METRICS_UPDATE.md  CACHE_SETUP.md  CACHE_TRACKING.md  CATEGORY_RELATIVE_TIERS.md  CONTEXTUAL_SEARCH_APPROACH.md  DEPLOYMENT.md  DURABILITY_VALIDATION.md  FIX_CACHE_MISSING_FIELDS.md  GOOGLE_SEARCH_SETUP.md  IMAGE_EXTRACTION_IMPLEMENTATION_COMPLETE.md  MIGRATION_INSTRUCTIONS.md  MIGRATION_TO_GEMINI.md  PERFORMANCE_OPTIMIZATION.md  README.md  TESTING.md  add_cache_tracking.sql  add_durability_and_practical_metrics.sql  add_durability_and_practical_metrics_simple.sql  add_quality_data_column.sql  add_real_search_metrics_column.sql  adk_search.py  agent_service.py  auth_middleware.py  build-frontend.sh  characteristic_generator.py  check_air_fryer_data.py  check_cache.py  check_cached_data.py  check_cached_queries.py  check_database_schema.py  check_secrets.sh  clear_air_fryer_cache.py  clear_all_cache.py  clear_cache.py  clear_dutch_oven_cache.py  contextual_search.py  (+58 more)
backend/_archive_openai_tavily/: README.md  simple_search.py  (+1 more)
(+55 files in other folders)
